plugins {
    id 'application'
    id 'java-library'
    id 'maven-publish'
}

group 'xyz.niflheim'
version = "4.0.0-SNAPSHOT"
mainClassName = 'xyz.niflheim.stockfish.StockfishTester'

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
    withSourcesJar()
}

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release.set(17)
}

test {
    useJUnitPlatform()
}

dependencies {
    compileOnlyApi 'org.apache.logging.log4j:log4j-api:2.19.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
    testImplementation 'org.apache.logging.log4j:log4j-api:2.19.0'
    testImplementation 'org.apache.logging.log4j:log4j-core:2.19.0'
    testRuntimeOnly("org.slf4j:slf4j-jdk14:2.0.6")
}

jar {
    manifest {
        attributes 'Main-Class': 'xyz.niflheim.stockfish.StockfishTester'
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}
